--- a/maxhanna.client/src/app/user/user.component.css
+++ b/maxhanna.client/src/app/user/user.component.css
@@ -1,7 +1,7 @@
 .componentMain,
 .componentMainFullHeight {
-  height: CALC(var(--vh, 1vh) * 100 - 115px);
-  height: calc(100dvh - 115px);
+  height: CALC(var(--vh, 1vh) * 100 - 60px);
+  height: calc(100dvh - 60px);
 }
 
 .componentTitle {
